Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98365

Memory leak with removed persisted items

XMLWordPrintable

    • da38eaf43 (dev), 477edcb3a (6.6), 228efa08a (6.5)

      In attached example, press any key to clear the model. Hidden element 'b' is not destroyed as can be seen from the debug messages.

        1. qtbug98365.zip
          2 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-98365
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            poikelin Joni Poikelin
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes