QQmlDelegateModelPrivate::itemsRemoved - keep persisted items in cache

QQmlDelegateModelPrivate::itemsRemoved removes unreferenced items from
the cache. If an item is persisted and unreferenced, it's disappearance
from the cache will prevent display models (e.g. qqmllistmodel) from
looping over all delegates. This can lead incomplete clear operations
and dangling screen artifacts.

This patch adds a condition to prevent persited items from being
removed from the cache.

It adds a test function in tst_QQmlDelegateModel.

Fixes: QTBUG-98365
Change-Id: I52e6344be85ca64eadbf44378de32cde126ff07a
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit da38eaf433ac1c241a29766ea8a82237caa497b5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>